--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,11 @@
   "name": "client",
   "version": "1.0.0",
   "description": "JSHasPower",
-  "main": "index.js",
+  "main": "data.js",
   "license": "MIT",
+  "scripts": {
+    "start": "json-server --watch data.js"
+  },
   "dependencies": {
     "faker": "^4.1.0",
     "json-server": "^0.10.0"
